[tool.poetry]
name = "case_study"
version = "0.1.0"
description = "Train Sales Case Study"
authors = ["Ben Liddington <liddingtonben@gmail.com>"]
readme = "README.md"
packages = [{ include = "case_study" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
numpy = "^1.26"
pandas = "^2.2"
scikit-learn = "^1.4"
matplotlib = "^3.8"
seaborn = "^0.13"
statsmodels = "^0.14"
mlflow  = { version = "^2.14", optional = true }
pyarrow = { version = "^17.0", optional = true }
shapely = "^2.1.2"
geopandas = "^1.1.1"
holidays = "^0.81"
geopy = "^2.4.1"
rapidfuzz = "^3.14.1"
tqdm = "^4.67.1"
jinja2 = "^3.1.6"
xgboost = "^3.0.5"
prophet = "^1.1.7"

[tool.poetry.extras]
gbt = ["xgboost"]
tracking = ["mlflow"]
parquet = ["pyarrow"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^4.1"
flake8 = "^7.0"
pre-commit = "^3.6"
ipykernel = "^6.29"
nbformat = "^5.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
